# Hack4KrakSite

./: .dockerignore  .editorconfig  .env.example  .gitignore  .gitmodules  .npmrc  AGENTS.md  DEPENDENCY_UPDATE_REVIEW.md  DEPLOYMENT.md  Dockerfile  README.md  bun.ts  bunfig.toml  docker-compose.yml  fly.toml  package-lock.json  package.json  pnpm-lock.yaml  renovate.json
backend/: ARCHITECTURE.md  Cargo.toml  DEVELOPMENT.md  Dockerfile  README.md  package.json  rust-toolchain.toml  rustfmt.toml
backend/entity/: Cargo.toml
backend/entity/src/: lib.rs  teams.rs  users.rs
backend/hack4krak-backend-macros/: Cargo.toml
backend/hack4krak-backend-macros/src/: lib.rs
backend/locales/: error.yaml
backend/macros/: Cargo.toml
backend/macros/src/: lib.rs
backend/macros/src/macros/: localized_error.rs  mod.rs  to_schema_from_file_name.rs  updatable_model.rs
backend/migration/: Cargo.toml
backend/migration/src/: lib.rs  m20250111_153247_intial.rs  m20250113_202045_auth_improvements.rs  m20250129_162814_add_team_invitation_field_to_user.rs  m20250130_145618_change_teams_and_users_pk_to_id_add_team_invites_table_drop_teaminvitations_column.rs  m20250130_182300_refactor_of_initial_fk_and_leader_system.rs  m20250131_155122_rename_teamname_to_team_and_change_relation_to_team_id_in_users.rs  m20250203_105134_setup_roles_system.rs  m20250204_175306_add_email_confirmation_table.rs  m20250221_165419_add_flag_capture.rs  m20250225_160500_create_password_reset_table.rs  m20250225_171450_add_confirmation_code_and_status_fields_to_team.rs  m20250429_123733_user_personal_info.rs  m20250430_183841_unified_email_verification.rs  m20250503_182326_create_external_team_invitation.rs  m20250509_132339_remove_id_from_personal_info_add_personal_info_column_to_user.rs  m20250526_105526_add_team_color_field.rs  m20250526_172108_add_organization_column_to_team.rs  m20250604_000001_new_identification_system.rs  m20260412_000001_remove_team_confirmation_fields.rs  m20260429_225143_add_first_name_to_users.rs  m20260429_225144_onboarding_field_rework.rs  m20260429_225144_personal_info_field_rework.rs  m20260505_000000_event_registration.rs  m20260513_000000_announcements.rs
backend/openapi-check/: Cargo.toml
backend/openapi-check/src/: main.rs
backend/openapi-cli/: Cargo.toml
backend/openapi-cli/src/: main.rs
backend/openapi_check/src/: main.rs
backend/src/: lib.rs  main.rs
backend/src/entities/: announcement.rs  email_confirmation.rs  email_verification_request.rs  event_registration.rs  external_team_invitation.rs  flag_capture.rs  mod.rs  password_reset.rs  prelude.rs  sea_orm_active_enums.rs  team_invites.rs  teams.rs  user_onboarding.rs  user_participant_tags.rs  user_personal_info.rs  users.rs
backend/src/middlewares/: auth.rs  auth_middleware.rs  event.rs  mod.rs  status_code_drain_middleware.rs  task.rs
backend/src/models/: announcement.rs  ctf_experience.rs  email_confirmation.rs  email_verification_request.rs  event_config.rs  event_registration.rs  external_team_invitation.rs  flag_capture.rs  mod.rs  password_reset.rs  school_grade.rs  task.rs  team_invites.rs  team_status.rs  teams.rs  user.rs  user_onboarding.rs  user_participant_tags.rs  user_personal_info.rs  user_roles.rs
backend/src/models/entities/: mod.rs  prelude.rs  team_invites.rs  teams.rs  users.rs
backend/src/models/task_manager/: event_config.rs  mod.rs  participant_tags_config.rs  registration_config.rs  task_config.rs
backend/src/routes/: auth.rs  index.rs  metrics.rs  mod.rs  user.rs
backend/src/routes/account/: change_password.rs  delete.rs  get_onboarding.rs  get_personal_info.rs  get_personal_information.rs  identification.rs  index.rs  mod.rs  submit_onboarding.rs  submit_personal_information.rs  update.rs  verification.rs
backend/src/routes/admin/: index.rs  mod.rs
backend/src/routes/announcements/: latest.rs  list.rs  mod.rs
backend/src/routes/auth/: confirm.rs  login.rs  logout.rs  mod.rs  oauth.rs  refresh.rs  register.rs  reset_password.rs  status.rs
backend/src/routes/event/: info.rs  is_event_in_progress.rs  label.rs  mod.rs  participant_tags.rs  participate.rs  registration.rs  status.rs
backend/src/routes/events/: mod.rs
backend/src/routes/flag/: mod.rs  submit.rs
backend/src/routes/leaderboard/: chart.rs  ctftime.rs  mod.rs  sse_handler.rs  teams.rs  updates.rs  (+1 more)
backend/src/services/: auth.rs  authentication.rs  authorization.rs  emails.rs  env.rs  identification.rs  mod.rs  task_manager.rs  verification.rs
backend/src/utils/: app_state.rs  bearer.rs  colors.rs  common_responses.rs  cookies.rs  ctftime.rs  email.rs  emails.rs  env.rs  error.rs  handle_database_error.rs  jwt.rs  leaderboard_freeze.rs  mod.rs  not_found_error.rs  oauth.rs  openapi.rs  points_counter.rs  qr_code.rs  real_ip.rs  server_event.rs  sse_event.rs  sse_handler.rs  sse_message.rs  success_response.rs  task.rs  validation.rs
backend/templates/email/: base.html  config.yaml  email_confirmation.html  external_registration_form.html  identification_qr_code.html  informational.html  macros.html  registration_confirmation.html  reset_password.html  verification_qr_code.html
backend/tests/: account.rs  auth.rs  email.rs  flag.rs  mod.rs  openapi.rs  points_counter.rs  roles.rs  teams.rs  utils.rs
backend/tests/middlewares/: auth.rs  event.rs  mod.rs
backend/tests/mocks/: mod.rs  smtp_mock.rs
backend/tests/models/: email_verification_model.rs  event_config.rs  external_team_invitation.rs  flag_capture.rs  mod.rs  team_invites.rs  teams.rs  user.rs  user_personal_info.rs
backend/tests/routes/: account.rs  admin.rs  announcements.rs  auth.rs  email.rs  event.rs  flag.rs  index.rs  leaderboard.rs  metrics.rs  mod.rs  task.rs  teams.rs
backend/tests/services/: auth.rs
backend/tests/test_utils/: database.rs  header.rs  mail.rs  mod.rs  task_manager.rs  verification_mock.rs
backend/tests/utils/: bearer.rs  common_responses.rs  cookies.rs  email.rs  error.rs  handle_database_error.rs  jwt.rs  leaderboard_freeze.rs  mod.rs  points_counter.rs  server_event.rs  success_response.rs  task_manager.rs
(+457 files in other folders)
