[package]
name = "hack4krak-backend"
version.workspace = true
edition.workspace = true

[features]
full-test-suite = []

[workspace]
members = [".", "macros", "migration", "openapi-cli"]

[workspace.package]
version = "2.0.0"
edition = "2024"

[workspace.dependencies]
sea-orm = { version = "1.1.19", features = [ "sqlx-postgres", "sqlx-sqlite", "runtime-tokio-rustls", "macros", "mock" ] }
tokio = { version = "1.49.0", features = ["macros", "rt", "rt-multi-thread", "fs"] }
serde_norway = "0.9.42"

[dependencies]
# Generating OpenAPI
utoipa = { version = "5.4.0", features = ["actix_extras", "macros", "chrono", "uuid"] }
utoipa-actix-web = "0.1.2"
utoipa-scalar = { version = "0.3.0", features = ["actix-web"] }

# Custom crates
migration = { path = "migration" }
hack4krak-macros = { path = "macros" }

# Web
actix-web = { version = "4.12.1", features = ["cookies"] }
actix-web-validation = { version = "0.8.0", features = ["validator"] }
actix-cors = "0.7.1"
actix-governor = "0.10.0"
actix-files = "0.6.10"
actix-http = "3.11.2"

# Serde
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
serde_norway.workspace = true

# Workspace
sea-orm.workspace = true
tokio.workspace = true

# Utils
regex = "1.12.3"
futures-util = "0.3.32"
reqwest = { version = "0.13.2", features = ["json"] }
uuid = { version = "1.21.0", features = ["serde", "v4"] }
envy = "0.4.2"
dotenvy = "0.15.7"
thiserror = "2.0.18"
tracing = "0.1.44"
tracing-subscriber = "0.3.22"
argon2 = "0.6.0-rc.7"
jsonwebtoken = {  version = "10.3.0", features = ["rust_crypto"] }
chrono = "0.4.43"
oauth2 = { version = "5.0.0", features = ["reqwest"] }
lettre = "0.11.19"
dashmap = "6.1.0"
validator = { version = "0.20.0", features = ["derive"] }
sha2 = "0.10.9"
url = "2.5.8"
async-stream = "0.3.6"
rand = "0.10.0"
prometheus = "0.14.0"
askama = { version = "0.15.4", features = ["blocks"] }

[dev-dependencies]
quoted_printable = "0.5.1"
testcontainers = "0.27.0"
