[package]
name = "migration"
version.workspace = true
edition = "2024"
publish = false

[lib]
name = "migration"
path = "src/lib.rs"

[dependencies]
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }

[dependencies.sea-orm-migration]
version = "1.1.7"
features = ["runtime-tokio-rustls", "sqlx-postgres" ]
